--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "JATE",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd server && npm install && cd ../client && npm install",
-    "client": "cd client && npm start",
+    "client": "cd client && npm start"
   },
-  "keywords": [],
+"repository": {
+    "type": "git",
+    "url": "git+https://github.com/cykj40/pwa-text-editor.git"
+},
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "express": "^4.17.1"
+  
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
